--- a/src/Components/Post/Post.css
+++ b/src/Components/Post/Post.css
@@ -1,7 +1,7 @@
 .post{
   /* background-color: aliceblue; */
   border: 1px solid lightgray;
-  width: 50vw;
+  width: 99%;
   min-width: 360px;
   padding-bottom: 1rem;
   margin: 1rem 0;
